--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path: ^1.9.0
   flutter_hooks: ^0.20.5
   sqflite_common_ffi: ^2.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
