--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   sqflite_common_ffi: ^2.0.0
   intl: ^0.20.2
+  google_fonts: ^4.0.0
 
 dev_dependencies:
   flutter_test:
