--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.20.2
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.7.0
+  multiple_result: ^5.1.0
 
 dev_dependencies:
   flutter_test:
